--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/Assignment-1/test",
+            "program": "${workspaceFolder}/Assignment-2/Code/tester",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
